--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,7 @@
 /* Stop purging. */
 
 /* Your own custom utilities */
-
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
 html,
 body,
 #__next {
@@ -21,9 +21,29 @@ body,
   height: 100%;
 }
 
+html,
+body,
+span,
+p,
+button,
+input,
+select,
+textarea {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
 :root {
   --inlineCode-bg: rgba(255, 229, 100, 0.2);
   --inlineCode-text: #1a1a1a;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Lora', serif;
 }
 
 /**
@@ -172,7 +192,7 @@ pre[data-line] {
   content: none;
 }
 
-.post-body.prose {
+.w-max.prose {
   max-width: 100%;
 }
 
