--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,8 +12,6 @@
 @tailwind utilities;
 /* Stop purging. */
 
-/* Your own custom utilities */
-@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;0,700;1,300;1,400;1,600;1,700&display=swap');
 html,
 body,
 #__next {
@@ -28,7 +26,8 @@ p,
 button,
 input,
 select,
-textarea {
+textarea,
+a {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
@@ -43,7 +42,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Lora', serif;
+  font-family: 'Space Grotesk', serif;
 }
 
 /**
