Added substack widget

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -28,7 +28,7 @@ input,
 select,
 textarea,
 a {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: 'Quicksand', sans-serif;
 }
 
 :root {
