--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,9 +9,8 @@ body,
   height: 100%;
 }
 
-:root {
-  --inlineCode-bg: rgba(255, 229, 100, 0.2);
-  --inlineCode-text: #1a1a1a;
+body {
+  @apply antialiased dark:bg-gray-900 text-gray-900 dark:text-gray-50;
 }
 
 h1,
@@ -19,8 +18,16 @@ h2,
 h3,
 h4,
 h5,
-h6 {
-  font-family: 'Space Grotesk', serif;
+h6,
+h7 {
+  font-family: 'Raleway', sans-serif;
+}
+
+
+:root {
+  --inlineCode-bg: rgba(255, 229, 100, 0.2);
+  --inlineCode-text: #1a1a1a;
+  --web_bg_color: #1a1a1a;
 }
 
 /**
@@ -181,9 +188,4 @@ pre[data-line] {
   color: hsla(0, 0%, 0%, 0.59);
   font-style: italic;
   border-left: 0.32813rem solid hsla(0, 0%, 0%, 0.9);
-}
-
-.top-background {
-  background: linear-gradient(0deg, rgba(255, 255, 255, 1) 10%, rgba(255, 255, 255, 0) 85%),
-    url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23bdbdbd' fill-opacity='0.3' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
