--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -11,3 +11,7 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+.text-balance {
+  text-wrap: balance;
+}
